--- a/index.html
+++ b/index.html
@@ -47,10 +47,46 @@
         <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
       </svg>
     </button>
+    <ul class="nav-mobile-menu">
+      <li class="menu-link-mobile">Studio</li>
+      <li class="menu-link-mobile">Portfolio</li>
+      <li class="menu-link-mobile">Contacts</li>
+      <li class="menu-link-mobile telephone-in-mob-menu">+11 (000) 111-11-11</li>
+      <li class="menu-link-mobile e-mail-in-mob-menu">info@devstudio.com</li>
+      <ul class="social-media-mobile">
+        <li class="social-media-mobile-element">
+          <a href="#" class="social-media-link social-team-link">
+            <svg width ="24" height="24" class="social-media-icon">
+              <use href="./images/icons.svg#icon-instagram-2"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-media-mobile-element">
+          <a href="#" class="social-media-link social-team-link">
+            <svg width ="24" height="24" class="social-media-icon">
+              <use href="./images/icons.svg#icon-twitter-1"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-media-mobile-element">
+          <a href="#" class="social-media-link social-team-link">
+            <svg width ="24" height="24" class="social-media-icon">
+              <use href="./images/icons.svg#icon-facebook-1"></use>
+            </svg>
+          </a>
+        </li>
+        <li class="social-media-mobile-element">
+          <a href="#" class="social-media-link social-team-link">
+            <svg width ="24" height="24" class="social-media-icon">
+              <use href="./images/icons.svg#icon-linkedin-1"></use>
+            </svg>
+          </a>
+        </li>
+      </ul>
+    </ul>
   </div>
 </div>
   </header>
-
 
                                       <!-- MAIN - 1 SECTION -->                                   
     <main>
@@ -63,7 +99,7 @@
       </section>
 
                                       <!-- Section 2 -->
-    <!-- <section class="features titles">
+    <section class="features titles">
       <div class="container">
       <h2 hidden class="hidden">features</h2>
       <ul class="list feature-list">
@@ -116,7 +152,7 @@
         </li>
       </ul>
       </div>
-    </section> -->
+    </section>
 
                                      <!-- Section 3 -->
 
