--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
         <a href="./index.html" class="logo-link link logo-link-unik"> Web<span class="logo-span">Studio</span></a>
         <ul class="list nav-list">
           <li class="menu-item"> <a href="./index.html" class="menu-link link">Studio</a></li>
-          <li class="menu-item"> <a href="./portfolio.html" class="menu-link link posulanya-portfolio current">Portfolio</a></li>
+          <li class="menu-item"> <a href="./portfolio.html" class="menu-link link posulanya-portfolio current poloska">Portfolio</a></li>
           <li class="menu-item"> <a href="" class="menu-link link">Contacts</a></li>
         </ul>
       </nav>
