--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       </section>
 
                                       <!-- Section 2 -->
-    <section class="features titles">
+    <section class="features">
       <div class="container">
       <h2 hidden class="hidden">features</h2>
       <ul class="list feature-list">
