--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <div class="container">
       <h2 hidden class="hidden">features</h2>
       <ul class="list feature-list">
-        <li class="title-theme first-element-spiska">
+        <li class="first-element-spiska">
           <div class="container-for-icons">
             <svg class="icon" width="64" height="64">
             <use href="./images/icons.svg#icon-antenna-1"></use>
@@ -115,7 +115,7 @@
             perfect and creative solution.
           </p>
         </li>
-        <li class="title-theme first-element-spiska">
+        <li class="first-element-spiska">
           <div class="container-for-icons">
             <svg class="icon" width="64" height="64">
             <use href="./images/icons.svg#icon-clock-1"></use>
@@ -127,7 +127,7 @@
             within the shortest possible time.
           </p>
         </li>
-        <li class="title-theme first-element-spiska">
+        <li class="first-element-spiska">
           <div class="container-for-icons">
             <svg class="icon" width="64" height="64">
             <use href="./images/icons.svg#icon-diagram-1"></use>
@@ -138,7 +138,7 @@
             growth opportunities and minimize risk.
           </p>
         </li>
-        <li class="title-theme first-element-spiska">
+        <li class="first-element-spiska">
           <div class="container-for-icons">
             <svg class="icon" width="64" height="64">
             <use href="./images/icons.svg#icon-astronaut-1"></use>
