--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
                                      <!-- Section 3 -->
 
-      <!-- <section class="third-section">
+      <section class="third-section">
         <div class="container">
         <h2 class="zagolovok">What are we doing</h2>
         <ul class="list images">
@@ -186,14 +186,14 @@
           </li>
         </ul>
         </div>
-      </section> -->
+      </section>
 
                      <!-- 4 section -->
 
-      <!-- <section class="our-team">
+      <section class="our-team">
         <div class="container">
         <h2 class="zagolovok">Our Team</h2>
-        <ul class="list images">
+        <ul class="list images images-main-telephone-ipad">
           <li class="worker">
             <img
               src="./images/mark.jpg"
@@ -418,7 +418,7 @@
           </li>
         </ul>
       </div>
-    </section> -->
+    </section>
     </main>
 
                               
