--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                               <!-- 5 section -->
                               
     <section class="brand-logos">
-      <div class="container">
+      <div class="container conteiner-dlya-brands">
         <h2 class="zagolovok-for-brands">Customers</h2>
         <ul class="spisok-brands list">
           <li class="logo-brand">
@@ -427,7 +427,7 @@
                               
 
                                <!-- FOOTER -->
-  <!-- <footer class="footer footer-extra">
+  <footer class="footer footer-extra">
     <div class="container div-footer-extra">
       <div class="social-media-footer">
     <a href="#" class="logo-link link footer-special">Web<span class="logo-span-footer">Studio </span></a>
@@ -486,7 +486,7 @@
           </form>
         </div>
     </div>
-  </footer> -->
+  </footer>
 
     <!-- <div data-modal class="window-extra is-hidden">
       <div class="modal-window">
