--- a/index.html
+++ b/index.html
@@ -430,44 +430,44 @@
   <footer class="footer footer-extra">
     <div class="container div-footer-extra">
       <div class="social-media-footer">
-    <a href="#" class="logo-link link footer-special">Web<span class="logo-span-footer">Studio </span></a>
-    <p class="text-footer">
-      Increase the flow of customers and sales for your business with
-      digital marketing & growth solutions.
-    </p>
+        <a href="#" class="logo-link link footer-special">Web<span class="logo-span-footer">Studio </span></a>
+          <p class="text-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
       </div>
-      <div>
-      <p class="text-footeer-extra">Social media</p>
-      <ul class="social-media-settings list">
-        <li class="social-media-element">
-          <a href="#" class="social-media-link social-footer-link">
-            <svg width ="24" height="24" class="social-media-icon">
-              <use href="./images/icons.svg#icon-instagram-2"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="social-media-element">
-          <a href="#" class="social-media-link social-footer-link">
-            <svg width ="24" height="24" class="social-media-icon">
-              <use href="./images/icons.svg#icon-twitter-1"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="social-media-element">
-          <a href="#" class="social-media-link social-footer-link">
-            <svg width ="24" height="24" class="social-media-icon">
-              <use href="./images/icons.svg#icon-facebook-1"></use>
-            </svg>
-          </a>
-        </li>
-        <li class="social-media-element">
-          <a href="#" class="social-media-link social-footer-link">
-            <svg width ="24" height="24" class="social-media-icon">
-              <use href="./images/icons.svg#icon-linkedin-1"></use>
-            </svg>
-          </a>
-        </li>
-      </ul>
+      <div class="social-media-div">
+        <p class="text-footer-extra">Social media</p>
+        <ul class="social-media-settings list">
+          <li class="social-media-element">
+            <a href="#" class="social-media-link social-footer-link">
+              <svg width ="24" height="24" class="social-media-icon">
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-media-element">
+            <a href="#" class="social-media-link social-footer-link">
+              <svg width ="24" height="24" class="social-media-icon">
+                <use href="./images/icons.svg#icon-twitter-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-media-element">
+            <a href="#" class="social-media-link social-footer-link">
+              <svg width ="24" height="24" class="social-media-icon">
+                <use href="./images/icons.svg#icon-facebook-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="social-media-element">
+            <a href="#" class="social-media-link social-footer-link">
+              <svg width ="24" height="24" class="social-media-icon">
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
       </div>
         <div class="div-v-konce-footer">
           <p class="opis-tekstu-v-dop-okne">Subscribe</p>
@@ -479,9 +479,10 @@
                 pattern="[a-zA-Z]+"
                 placeholder="E-mail"> 
             </label>
-            <button type="submit" class="knopka">Subscribe<svg width="24" height="24" class="knopka-svg">
+            <button type="submit" class="knopka">Subscribe
+              <svg width="24" height="24" class="knopka-svg">
               <use href="./images/icons.svg#icon-Frame-3"></use>
-            </svg>
+              </svg>
             </button>
           </form>
         </div>
