--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </svg>
               </div>
               <h3 class="features-heading">Strategy</h3>
-                <p class="text">
+                <p class="text text-mobile">
                   Our goal is to identify the business problem to walk away with the perfect and creative solution.
                 </p>
             </li>
@@ -123,7 +123,7 @@
                 </svg>
               </div>
           <h3 class="features-heading">Punctuality</h3>
-            <p class="text">
+            <p class="text text-mobile">
             Bring the key message to the brand's audience for the best price
             within the shortest possible time.
             </p>
@@ -135,7 +135,7 @@
                 </svg>
               </div>
           <h3 class="features-heading">Diligence</h3>
-            <p class="text">Research and confirm brands that present the strongest digital
+            <p class="text text-mobile">Research and confirm brands that present the strongest digital
             growth opportunities and minimize risk.
             </p>
             </li>
@@ -146,7 +146,7 @@
                 </svg>
         </div>
           <h3 class="features-heading">Technologies</h3>
-            <p class="text">
+            <p class="text text-mobile">
             Design practice focused on digital experiences. We bring forth a
             deep passion for problem-solving.
             </p>
@@ -489,7 +489,7 @@
     </div>
   </footer>
 
-    <!-- <div data-modal class="window-extra is-hidden">
+    <div data-modal class="window-extra is-hidden">
       <div class="modal-window">
         <button type="button" data-modal-close class="button-window">
           <svg width="8" height="8" class="cross">
@@ -561,7 +561,7 @@
           <button class="button-privacy-policy" type="submit">Send</button>
       </form>
       </div>
-    </div> -->
+    </div>
   <script src="./js/modal.js"></script>
   <script src="./js/mobile-menu.js"></script>
 </body>
