--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
               height="260"
             >
             <div class="worker-posada">    
-              <h3 class="features-heading">Mark Guerrero</h3>
+              <h3 class="features-heading names">Mark Guerrero</h3>
                 <p class="text otstup-v-tekste">Product Designer</p>
                   <ul class="social-media list">
                     <li class="social-media-element">
@@ -246,7 +246,7 @@
               height="260"
             >
             <div class="worker-posada"> 
-            <h3 class="features-heading">Tom Ford</h3>
+            <h3 class="features-heading names">Tom Ford</h3>
             <p class="text otstup-v-tekste">Frontend Developer</p>
             
             <ul class="social-media list">
@@ -290,7 +290,7 @@
               height="260"
             >
             <div class="worker-posada"> 
-            <h3 class="features-heading">Camila Garcia</h3>
+            <h3 class="features-heading names">Camila Garcia</h3>
             <p class="text otstup-v-tekste">Marketing</p>
             <ul class="social-media list">
               <li class="social-media-element">
@@ -333,7 +333,7 @@
               height="260"
             >
             <div class="worker-posada"> 
-            <h3 class="features-heading">Daniel Wilson</h3>
+            <h3 class="features-heading names">Daniel Wilson</h3>
             <p class="text otstup-v-tekste">UI Designer</p>
             <ul class="social-media list">
               <li class="social-media-element">
