--- a/index.html
+++ b/index.html
@@ -197,6 +197,8 @@
             <ul class="list images images-main-telephone-ipad">
               <li class="worker">
             <img
+              srcset="./images/mark@1x.png 1x,
+              ./images/images/mark@1x.png 2x"
               src="./images/mark.jpg"
               alt="photo of employee"
               width="264"
@@ -240,6 +242,8 @@
 
           <li class="worker">
             <img
+            srcset="./images/tom@1x.png 1x,
+            ./images/images/tom@2x.png 2x"
               src="./images/tom.jpg"
               alt="photo of employee"
               width="264"
@@ -284,6 +288,8 @@
 
           <li class="worker">
             <img
+              srcset="./images/camila@1x.png 1x,
+              ./images/images/camila@2x.png 2x"
               src="./images/camila.jpg"
               alt="photo of employee"
               width="264"
@@ -327,6 +333,8 @@
 
           <li class="worker">
             <img
+              srcset="./images/daniel@1x.png 1x,
+              ./images/images/daniel@2x.png 2x"
               src="./images/daniel.jpg"
               alt="photo of employee"
               width="264"
