--- a/index.html
+++ b/index.html
@@ -288,8 +288,9 @@
 
           <li class="worker">
             <img
-              srcset="./images/camila@1x.png 1x,
-              ./images/images/camila@2x.png 2x"
+              srcset="
+              ./images/camila@1x.png,
+              ./images/camila@2x.png"
               src="./images/camila.jpg"
               alt="photo of employee"
               width="264"
