--- a/index.html
+++ b/index.html
@@ -197,8 +197,7 @@
             <ul class="list images images-main-telephone-ipad">
               <li class="worker">
             <img
-              srcset="./images/mark@1x.png 1x,
-              ./images/images/mark@1x.png 2x"
+              srcset="./images/mark@2x.png"
               src="./images/mark.jpg"
               alt="photo of employee"
               width="264"
@@ -242,8 +241,7 @@
 
           <li class="worker">
             <img
-            srcset="./images/tom@1x.png 1x,
-            ./images/images/tom@2x.png 2x"
+            srcset="./images/tom@2x.png"
               src="./images/tom.jpg"
               alt="photo of employee"
               width="264"
@@ -288,9 +286,7 @@
 
           <li class="worker">
             <img
-              srcset="
-              ./images/camila@1x.png,
-              ./images/camila@2x.png"
+              srcset="./images/camila@2x.png"
               src="./images/camila.jpg"
               alt="photo of employee"
               width="264"
@@ -334,8 +330,7 @@
 
           <li class="worker">
             <img
-              srcset="./images/daniel@1x.png 1x,
-              ./images/images/daniel@2x.png 2x"
+              srcset="./images/daniel@2x.png"
               src="./images/daniel.jpg"
               alt="photo of employee"
               width="264"
